--- a/src/components/styles/locationinfo.css
+++ b/src/components/styles/locationinfo.css
@@ -13,3 +13,27 @@
     border-radius: 0.5em;
   
   }
+
+  @media (max-width: 480px) {
+    .Location{
+      font-size: 10px;
+      width: 100%;
+
+    }
+    .Location__list{
+      display: flex;
+      gap: 20px;
+      width: 100%;
+      gap: 5px;
+      justify-content: center;
+      align-items: center;
+    }
+    li{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    
+  }
